<resources>
    <string name="app_name">MandatoryAssignmentV2</string>
    <string name="app_login_name_hint">Name</string>
    <string name="app_login_password_hint">Password</string>
    <string name="app_login_button_name">Login</string>
    <string name="app_MainMenu_buton_OwnObservations">Own\nObservations</string>
    <string name="app_MainMenu_buton_OthersObservations">Others\nObservations</string>
    <string name="app_specificBird_headerId">Bird Id = </string>
    <string name="app_specificBird_NameDanish_TextView">Navn</string>
    <string name="app_specificBird_NameDanishHint_EditText">Fuglens Navn</string>
    <string name="app_specificBird_Created_TextView">Created date</string>
    <string name="app_specificBird_CreatedHint_EditText">Created Date</string>
    <string name="app_specificBird_UserId_TextView">User Id</string>
    <string name="app_specificBird_UserIdHint_EditText">User Id</string>
    <string name="app_menuMain_AddBird_Button">Add\\nBird</string>
    <string name="app_menuMain_Logout_Button">Log\\nOut</string>
</resources>
