<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lardman.mandatoryassignmentv2.Login">

    <EditText
        android:id="@+id/login_Name_EditText"
        android:inputType="text"
        android:hint="@string/app_login_name_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <EditText
        android:id="@+id/login_Password_EditText"
        android:inputType="textPassword"
        android:hint="@string/app_login_password_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_LoginButton_Button"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/app_login_button_name"
        android:onClick="LoginButtonClicked"/>

</LinearLayout>
