<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.lardman.mandatoryassignmentv2.AddBird">


    <TextView
        android:id="@+id/specificBird_headerId_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/specificBird_NameDanish_EditText"
                android:text="@string/app_specificBird_NameDanish_TextView" />

            <EditText
                android:id="@+id/specificBird_NameDanish_EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/app_specificBird_NameDanishHint_EditText"
                android:inputType="textCapWords" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/specificBird_Created_EditText"
                android:text="@string/app_specificBird_Created_TextView" />

            <EditText
                android:id="@+id/specificBird_Created_EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/app_specificBird_CreatedHint_EditText"
                android:inputType="textCapWords" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/specificBird_UserId_EditText"
                android:text="@string/app_specificBird_UserId_TextView" />

            <EditText
                android:id="@+id/specificBird_UserId_EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/app_specificBird_UserIdHint_EditText"
                android:inputType="textCapWords" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/book_price_edittext"
                android:text="Price" />

            <EditText
                android:id="@+id/book_price_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Price"
                android:inputType="numberDecimal" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="updateBook"
                android:text="Update" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="deleteBook"
                android:text="Delete" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="back"
                android:text="Back" />

            <TextView
                android:id="@+id/book_message_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

